--- a/project phase 1/index.html
+++ b/project phase 1/index.html
@@ -43,8 +43,14 @@
                 <ul id="doneReadingList"></ul>
             </div>
         </div>
+        <div id="userexperience">
+            <h3><p>If u feel like there is something that you may want us to change for you to have the best experience <br>with our app feel free to write it down here and help us make customers happy.</p></h3>
+            <form id="feedbackForm">
+                <input type="text" id="feedbackInput" placeholder="Feed back">
+                <button type="submit">Submit</button>
+            </form>
+        </div>
     </div>
-
     <script src="index.js"></script>
 </body>
 </html>
