--- a/project phase 1/index.html
+++ b/project phase 1/index.html
@@ -22,6 +22,10 @@
             <button onclick="showLibrary()">My Library</button>
         </div>
 
+        <h2>Favorites</h2>
+      <ul id="favoritesList"></ul>
+
+
         <div id="library" style="display: none;">
 
             <div id="currentlyReading">
